--- a/.github/workflows/pytest-env.yml
+++ b/.github/workflows/pytest-env.yml
@@ -51,6 +51,11 @@ jobs:
     - name: Checkout simple_functions
       uses: actions/checkout@v2
 
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.9
+
     - name: Install dependencies
       run: |
         pip install --upgrade pip
