--- a/.github/workflows/pytest-env.yml
+++ b/.github/workflows/pytest-env.yml
@@ -51,10 +51,10 @@ jobs:
     - name: Checkout simple_functions
       uses: actions/checkout@v2
 
-    - name: Set up Python 3.9
+    - name: Set up Python 3.x
       uses: actions/setup-python@v1
       with:
-        python-version: 3.9
+        python-version: "${{ matrix.python-version }}"
 
     - name: Install dependencies
       run: |
