--- a/.github/workflows/pytest-env.yml
+++ b/.github/workflows/pytest-env.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Set up Python 3.x
       uses: actions/setup-python@v1
       with:
-        python-version: $PYTHON_VERSION
+        python-version: PYTHON_VERSION
 
     - name: Install dependencies
       run: |
@@ -64,4 +64,4 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest $TESTS
+        pytest TESTS
